--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "livestory-js-sdk",
   "version": "1.0.0",
-  "description": "JavaScript SDK for Live Story's API",
+  "description": "JavaScript SDK for Live Story's Delivery API",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.mjs",
   "unpkg": "./dist/index.umd.js",
