--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "livestory-js-sdk",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "JavaScript SDK for Live Story's Delivery API",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.mjs",
   "unpkg": "./dist/index.umd.js",
   "jsdelivr": "./dist/index.umd.js",
-  "types": "./dist/types/entry.esm.d.ts",
+  "types": "./dist/types/src/entry.esm.d.ts",
   "author": "Live Story",
   "license": "MIT",
   "source": "src/index.ts",
