--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livestory-js-sdk",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-beta.1",
   "description": "JavaScript SDK for Live Story's Delivery API",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.mjs",
@@ -54,7 +54,8 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.20.0",
     "vite": "^6.0.6",
-    "vitest": "^2.1.9"
+    "vite-plugin-banner": "^0.8.1",
+    "vitest": "^3.2.4"
   },
   "prettier": {
     "semi": false,
@@ -64,7 +65,6 @@
   },
   "dependencies": {
     "kolorist": "^1.8.0",
-    "vite-plugin-banner": "^0.8.0",
     "vite-plugin-dts": "^4.5.0"
   },
   "bugs": {
